--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "browser-sync": "^2.26.14",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
-    "passport-auth0": "^1.4.0"
+    "passport-auth0": "^1.4.0",
+    "pug": "^3.0.2"
   }
 }
